--- a/component/examples/0-tutor.html
+++ b/component/examples/0-tutor.html
@@ -207,15 +207,37 @@
 				
 				// search function
 				var found = false;
-				o.convo[o.standingAnswer].reply.forEach(function(e, i) {
-					(strip(e.question).includes(strip(o.input)) && o.input.length > 0) ? found = e.answer : (found ? null : found = false);
-				});
+
+
+
+
+				for(var z =0; z<o.convo[o.standingAnswer].reply.length; z++)
+				{
+					
+					var dog = (o.convo[o.standingAnswer].reply)[z];
+					if( (strip((o.convo[o.standingAnswer].reply)[z]["question"]).includes(strip(o.input))) && o.input.length > 0 )
+					{
+						found = (o.convo[o.standingAnswer].reply)[z]["answer"] ;
+					}
+					else 
+					 found == false;
+
+
+				}
+
+
 				found ? match(found) : miss();
 				
 				
 				
 			}
 		});
+
+		function idk(e, i)
+		{
+			(strip(e.question).includes(strip(o.input)) && o.input.length > 0) ? found = e.answer : (found ? null : found = false);
+		}
+
 		givemeBubbles.talk(convo);
 		functionOne = function(){ alert("Function One"); }
 		functionTwo = function(){ alert("Function Two"); }
