--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -35,6 +35,7 @@
 	animation-play-state: paused;
 	animation-fill-mode: forwards;
 	opacity: 0;
+	transform: translate3d(0px, 0px, 0px);
 }
 @keyframes animate-reply {
     from { opacity: 0 }
@@ -56,13 +57,13 @@
 	border-radius: 15px 15px 5px 15px;
 }
 .bubble.reply.bubble-picked .bubble-content .bubble-button {
-	transform: scale(0);
+	transform: scale(0) translate3d(0px, 0px, 0px);;
 	padding: 0;
 }
 .bubble.reply:not(.bubble-picked) .bubble-content .bubble-button:hover,
 .bubble.reply .bubble-content .bubble-button.bubble-pick {
 	background: rgba(44, 44, 44, 1);
-	transform: scale(1);
+	transform: scale(1) translate3d(0px, 0px, 0px);;
   padding: 8px 16px;
   height: auto;
 }
