--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -30,12 +30,15 @@
 	transition: all 200ms;
 	text-decoration: none;
 	word-break: normal;
-	animation-duration: 1s;
+	/* animation-duration: 1s; */
 	animation-name: animate-reply;
 	animation-play-state: paused;
 	animation-fill-mode: forwards;
-	opacity: 0;
+	/* opacity: 0; */
 	transform: translate3d(0px, 0px, 0px);
+	animation-delay: -3s;
+-ms-animation-delay: -3;
+-webkit-animation-delay: -3s;
 }
 @keyframes animate-reply {
     from { opacity: 0 }
