--- a/component/styles/setup.css
+++ b/component/styles/setup.css
@@ -1,6 +1,6 @@
 /* setup container styles */
 .bubble-container {
-	background: linear-gradient(145deg, #e5e9f1, #fff);
+	background: #dcdde0;
 	height: 520px;
 	max-width: 750px;
 	width: 100%;
