--- a/component/examples/4-advanced-keyboard.html
+++ b/component/examples/4-advanced-keyboard.html
@@ -2,17 +2,24 @@
 <head>
 	<title>Chat Bubble Basics 1</title>
 	<meta charset="utf-8">
-	
+
 	<!-- for mobile screens -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
 	<!-- stylesheets for bubbles -->
 	<link rel="stylesheet" media="all" href="../styles/setup.css">
 	<link rel="stylesheet" media="all" href="../styles/says.css">
 	<link rel="stylesheet" media="all" href="../styles/reply.css">
 	<link rel="stylesheet" media="all" href="../styles/typing.css">
 	<link rel="stylesheet" media="all" href="../styles/input.css">
-
+	<style>
+	body {
+		background: #dcdde0;
+	}
+	.bubble-container {
+		height: 100vh;
+	}
+	</style>
 </head><body>
 
 <!-- the script -->
@@ -80,23 +87,23 @@ var convo = {
 var givemeBubbles = new Bubbles(
 	document.getElementById('chat'), 	// attach chatbot to placeholder above ^^
 	"givemeBubbles",									// you need to pass the name of the constructor variable that evokes Bubble function here
-	
-	
-	
-	
+
+
+
+
 	// you can pass options for chat bubble into the object variable.
 	{
-	
+
 		// the one that we care about is inputCallbackFn()
 		// this function returns an object with some data that we can process from user input
 		// and understand the context of it
-		
-		
+
+
 		// this is an example function that matches the text user typed to one of the answer bubbles
 		// this function does no natural language processing
 		// this is where you may want to connect this script to NLC backend.
 		inputCallbackFn: function(o){
-					
+
 			// add error conversation block & recall it if no answer matched
 			var miss = function(){
 				givemeBubbles.talk({
@@ -109,19 +116,19 @@ var givemeBubbles = new Bubbles(
 					},
 				}, "i-dont-get-it")
 			}
-		
+
 			// do this if answer found
 			var match = function(key){
-				setTimeout(function(){						
+				setTimeout(function(){
 					givemeBubbles.talk(convo, key); // restart current convo from point found in the answer
 				}, (600) );
 			}
-		
+
 			// sanitize text for search function
 			var strip = function(text){
 				return text.toLowerCase().replace(/[\s.,\/#!$%\^&\*;:{}=\-_'"`~()]/g,"");
 			}
-		
+
 			// search function
 			var found = false;
 			o.convo[o.standingAnswer].reply.forEach(function(e, i) {
